--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=BinaLiteDb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
