--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -11,7 +11,15 @@
     <Folder Include="Abstracts\Services\" />
     <Folder Include="DTOs\" />
     <Folder Include="Shared\Helpers\" />
+    <Folder Include="Shared\Settings\" />
     <Folder Include="Validations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
