Added Docker and MinIO

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "admin",
+    "SecretKey": "password",
+    "Bucket": "property-images",
+    "UseSSL": false
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=BinaLiteDb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
 
