Added User Login and Register

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,6 +7,14 @@
     "UseSSL": false
   },
 
+  "Jwt": {
+    "Secret": "N8qFZsY2RkV7mM4TQpA9LJcH5xDWeU0a1G6BfS3EoKZyJtR",
+    "Issuer": "BinaLiteApi",
+    "Audience": "BinaLiteClient",
+    "ExpirationMinutes": 60
+  },
+
+
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=BinaLiteDb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
 
