--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,11 +7,13 @@
     "UseSSL": false
   },
 
+
   "Jwt": {
     "Secret": "N8qFZsY2RkV7mM4TQpA9LJcH5xDWeU0a1G6BfS3EoKZyJtR",
     "Issuer": "BinaLiteApi",
     "Audience": "BinaLiteClient",
-    "ExpirationMinutes": 60
+    "ExpirationMinutes": 60,
+    "RefreshExpirationMinutes": 10080
   },
 
 
