--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "Seed": {
+    "AdminEmail": "admin@example.local",
+    "AdminPassword": "Admin123!",
+    "AdminFullName": "Admin"
   }
+
 }
