--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -16,6 +16,18 @@
     "RefreshExpirationMinutes": 10080
   },
 
+  "Email": {
+    "Enabled": true,
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UseSsl": true,
+    "UserName": "elsenibrahimov0505@gmail.com",
+    "Password": "lpolwhnybebdciqo",
+    "FromEmail": "elsenibrahimov0505@gmail.com",
+    "FromName": "BinaLite",
+    "ConfirmEmailBaseUrl": "https://localhost:7243/api/auth/confirm-email"
+  },
+
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=BinaLiteDb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
